# django-fcm-http

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
django_fcm_http_v1/: admin.py  apps.py  default_settings.py  errors_handlers.py  fcmManager.py  models.py  tests.py  views.py
django_fcm_http_v1/migrations/: 0001_initial.py
