[metadata]
name = django-fcm-http
version = 1.0.3
description = Django fcm http is a Django app to send push notifications to android, ios devices and web applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://www.patrickckabwe.com/
author = Patrick Kabwe
author_email = patrickckabwe@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0 